--- a/templates/product_table.html
+++ b/templates/product_table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Table</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pt.css') }}">
     <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
     <style>
         table, th, td {
@@ -34,7 +34,7 @@
         <p class="error">{{ error }}</p>
     {% else %}
         <form method="POST">
-            <label for="category">Select Category:</label>
+            <label for="category">Select Categaaaaory:</label>
             <select name="category" id="category">
                 {% for sanitized_category, original_category in categories %}
                     <option value="{{ sanitized_category }}" {% if sanitized_category == selected_category %}selected{% endif %}>{{ original_category }}</option>
