add delete feature

--- a/templates/product_table.html
+++ b/templates/product_table.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Table</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pt.css') }}">
     <style>
         table, th, td {
             border: 1px solid black;
